k8s/overlays/myhelsana-dev-az/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: catalog-service
    env: dev
    stage: dev
  name: catalog-service
  namespace: myhelsana-dev-az
spec:
  host: catalog-service-myhelsana-dev-az.osp-appl-preprod.hel.kko.ch
  port:
    targetPort: 8080-8080
  tls:
    termination: edge
  to:
    kind: Service
    name: catalog-service
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      host: catalog-service-myhelsana-dev-az.osp-appl-preprod.hel.kko.ch
      routerName: router
      wildcardPolicy: None
